# sweetheart.py

./: .gitignore  LICENSE  LISEZ-MOI.md  README.md  cherrypy.conf  get-sweetheart.py  pyproject.toml  readme.md  setup.py  start.py  sweet.legacy.py  sweet.py  sweet_test.py  sweetheart.py
configuration/: cherrypy.conf  packages.json  postcss.config.js  unit.json
datavision/: data.csv  data.json  run-server.py  test.html
documentation/book/: 404.html  bash.html  biblio.html  index.html  print.html  process.html  python.html  searchindex.js  searchindex.json  versions.html  welcome.html
documentation/notebooks/: Sweetheart in action.ipynb  SweetheartInAction.ipynb  Sweeyheart cookbook.ipynb  Sweeyheart services.ipynb  TailwindCss webpages .ipynb  Untitled.ipynb  Webpages for newbies.ipynb
documentation/src/: bash.md  htmlcss.md  python.md  versions.md  welcome.md
documentation/sweetbook/: book.toml
documentation/sweetdoc/: book.toml
legacy/: legacy.LISEZ-MOI.md  legacy.cherrypy.conf  legacy.cherrypy.py  legacy.demo.py  legacy.get-sweetheart.py  legacy.mongodb.py  legacy.somejs.js  legacy.test-d3.html
sweetheart/: __init__.py  bottle.py  cli.py  devkit.py  globals.py  heart.py  install.py  sandbox.py  security.py  services.py  stemplate.py  subproc.py  subprocess.py  sweet.py  tests.py
tests/: test_basics.py  test_init.py  test_sweetheart.py
webpages/: HTML
webpages/bottle_templates/: 4i.generalquery.txt  4i.timetable.txt  document.txt
webpages/resources/: postcss.config.js  sweetheart.js  tailwind.base.css  tailwind.config.js
(+26 files in other folders)
