[tool.poetry]
name = "sweetheart"
version = "0.1.1b2"
description = "get power with low-code and low-costs python programs"
authors = ["Nicolas Champion <champion.nicolas@gmail.com>"]
license = "CECILL-C"
readme = "README.md"
repository = "https://github.com/IncredibleProgress/sweetheart.py"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
