[tool.poetry]
name = "sweetheart"
version = "0.1.2b0"
description = "create powerfull python/html apps with ease"
authors = ["Nicolas Champion <champion.nicolas@gmail.com>"]
license = "CECILL-C"
readme = "README.md"
repository = "https://github.com/IncredibleProgress/sweetheart.py"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
